--- a/02-race-qc.ipynb
+++ b/02-race-qc.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c03c0e8a-f5b5-45fa-882c-944770863c5f",
+   "id": "9775f045-fce9-4952-ab08-6420d7a2f91f",
+   "metadata": {},
+   "source": [
+    "###"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "001af030-484d-4583-8317-4014a36775fc",
    "metadata": {},
    "source": [
     "#### setup"
@@ -72,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "72587c24-5373-4992-baa8-da715dff30ac",
    "metadata": {},
    "outputs": [],
@@ -91,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "5a940b48-a4f5-4b65-a2d3-bf08f2a70ddf",
    "metadata": {},
    "outputs": [],
@@ -105,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "3e8f9048-fc5f-4529-bfb3-5325c00d8dfe",
    "metadata": {},
    "outputs": [],
@@ -123,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "d3dd33b3-3ffa-4b22-b1f1-68aa2768d688",
    "metadata": {},
    "outputs": [],
@@ -141,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "cea155f3-410f-4633-bf54-e8416dcfe8be",
    "metadata": {},
    "outputs": [],
@@ -180,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "ea353ed7-415f-427a-9ed4-4eb8cbe56447",
    "metadata": {},
    "outputs": [
@@ -254,7 +262,7 @@
        "5                             White   343.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "2e4c976c-8154-4ab1-ad87-0d8a6553c8cb",
    "metadata": {},
    "outputs": [
@@ -550,7 +558,7 @@
        "31                Black               O41.1     1.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "81d65d54-1aa7-428d-a008-d522c9c51745",
    "metadata": {},
    "outputs": [],
@@ -601,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "43bd2ee1-b4b1-4725-9bf1-724ecc4e687a",
    "metadata": {},
    "outputs": [],
@@ -611,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "f1c2a05e-6572-47ed-bb4c-ad0d6f5cb72a",
    "metadata": {},
    "outputs": [],
@@ -623,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "7e7acbfd-a8e7-4926-aff8-bdd4b31604ca",
    "metadata": {},
    "outputs": [],
@@ -681,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "ac365995-5f9b-4496-9683-1ead6c03d480",
    "metadata": {},
    "outputs": [],
@@ -695,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "6f33e16d-62bc-48c2-bc65-cfc2240863fc",
    "metadata": {},
    "outputs": [],
@@ -710,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "6a794c3b-11d2-40d2-a12e-75c64f68e64b",
    "metadata": {},
    "outputs": [],
@@ -738,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "id": "fe0eb946-16c9-4ac1-9715-607ff93375e9",
    "metadata": {},
    "outputs": [],
@@ -756,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "be0e34ef-aeeb-4ed0-81a5-cb4e087e3cde",
    "metadata": {},
    "outputs": [],
@@ -769,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "id": "b2bfad04-c977-4b51-ad03-67f79043a5a2",
    "metadata": {},
    "outputs": [],
@@ -779,21 +787,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "id": "bdba7dab-1190-41e7-851c-7c054971d4e8",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/amatthews/.pyenv/versions/3.9.14/lib/python3.9/site-packages/altair/utils/core.py:317: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
+      "  for col_name, dtype in df.dtypes.iteritems():\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-9262dbc3c03149ec94eac8ddeeaca5c4\"></div>\n",
+       "<div id=\"altair-viz-add909c2d37f4ff782e34466fa1513fa\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-9262dbc3c03149ec94eac8ddeeaca5c4\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-9262dbc3c03149ec94eac8ddeeaca5c4\");\n",
+       "    if (outputDiv.id !== \"altair-viz-add909c2d37f4ff782e34466fa1513fa\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-add909c2d37f4ff782e34466fa1513fa\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -846,7 +862,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -874,7 +890,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.14"
   }
  },
  "nbformat": 4,
