--- a/02-race-qc.ipynb
+++ b/02-race-qc.ipynb
@@ -5,7 +5,7 @@
    "id": "9775f045-fce9-4952-ab08-6420d7a2f91f",
    "metadata": {},
    "source": [
-    "###"
+    "## CDC data on race and ethnicity"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "id": "001af030-484d-4583-8317-4014a36775fc",
    "metadata": {},
    "source": [
-    "#### setup"
+    "### load packages"
    ]
   },
   {
@@ -31,19 +31,6 @@
    "execution_count": 2,
    "id": "d41ef437-e280-44fa-b79c-b181cbd53dca",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests\n",
-    "import urllib.request\n",
-    "import numpy as np\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "6720ff36-f63f-4359-b9eb-c68fbff7bb87",
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -51,12 +38,14 @@
        "ThemeRegistry.enable('grid')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "import altair as alt\n",
     "import altair_grid as altgrid\n",
     "\n",
@@ -66,21 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "dc283286-dc1c-4031-a33a-f79dc8ff1699",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datawrapper import Datawrapper\n",
-    "\n",
-    "dw = Datawrapper(\n",
-    "    access_token=\"FtIwtvFtoGLaRT9a3gjX69PLu4wSuRyKddoOz6SOPw3k9wWyNICMHTkcPhOGCR5Z\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "72587c24-5373-4992-baa8-da715dff30ac",
    "metadata": {},
    "outputs": [],
@@ -94,12 +69,12 @@
    "id": "655280a2-5183-4f7e-a33f-12f06e5837ea",
    "metadata": {},
    "source": [
-    "### maternal death data"
+    "#### read in data grouped by year and cause of death"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "5a940b48-a4f5-4b65-a2d3-bf08f2a70ddf",
    "metadata": {},
    "outputs": [],
@@ -113,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "3e8f9048-fc5f-4529-bfb3-5325c00d8dfe",
    "metadata": {},
    "outputs": [],
@@ -126,12 +101,12 @@
    "id": "bfdc8a29-d37d-4bcf-af12-c37beea9f88f",
    "metadata": {},
    "source": [
-    "##### group of causes that are 42 days or more post-birth and therefore not counted in CDC surveillance"
+    "#### group of causes that are 42 days or more post-birth and therefore not counted in CDC surveillance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "d3dd33b3-3ffa-4b22-b1f1-68aa2768d688",
    "metadata": {},
    "outputs": [],
@@ -149,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "cea155f3-410f-4633-bf54-e8416dcfe8be",
    "metadata": {},
    "outputs": [],
@@ -187,9 +162,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4ccc194e-5dbf-4655-9af9-2cf2c53c4129",
+   "metadata": {},
+   "source": [
+    "#### summarize deaths by race/ethnicity to compare to 2020 [report](https://www.cdc.gov/nchs/data/hestat/maternal-mortality/2020/maternal-mortality-rates-2020.htm) and make sure your counts match"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "ea353ed7-415f-427a-9ed4-4eb8cbe56447",
+   "execution_count": 8,
+   "id": "b734d002-d4fe-4295-8fca-57132cd39240",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +245,7 @@
        "5                             White   343.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,11 +261,10 @@
    "id": "bd073714-3643-44a4-9700-6d27f89bcf2f",
    "metadata": {},
    "source": [
-    "##### number is closely matching CDC figures and accurate for hispanic/latino\n",
-    "##### but I'm seeing 3 extra deaths for black mothers and 6 for white mothers compared to cdc surveillance\n",
-    "##### https://www.cdc.gov/nchs/data/hestat/maternal-mortality/2020/maternal-mortality-rates-2020.htm\n",
-    "##### also checked the figures for 2018 and 2019, in 2018, matching for hispanic/latino but higher by four (in my calculations) for black and white mothers. in 2019, good for white and hispanic/latino but up by one\n",
-    "##### this is an important qc because the CDC doesn't present numbers for AAPI or Native mothers, so I can't fact-check those numbers. I have to be confident I'm counting correctly"
+    "#### Numbers are not quite matching\n",
+    "I'm seeing 3 extra deaths for black mothers and 6 for white mothers compared to CDC surveillance<br>\n",
+    "also checked the figures for 2018 and 2019, in 2018, matching for hispanic/latino but higher by four (in my calculations) for black and white mothers. in 2019, matching for white and hispanic/latino but up by one <br>\n",
+    "the CDC doesn't present numbers for AAPI or Native mothers, so I can't fact-check those numbers and am relying entirely on my own calculations and want to be confident they are correct, if I ever publish viz with this data"
    ]
   },
   {
@@ -290,12 +272,12 @@
    "id": "4bc2723a-1df4-44cb-9077-ce69f954524e",
    "metadata": {},
    "source": [
-    "##### here, you can see all the cause of death codes match those included by the CDC (or any with few enough deaths to explain the discrepancy)"
+    "#### Checking to see if I erroneously included any causes of death that weren't in the cdc list of causes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "2e4c976c-8154-4ab1-ad87-0d8a6553c8cb",
    "metadata": {},
    "outputs": [
@@ -558,7 +540,7 @@
        "31                Black               O41.1     1.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,23 +561,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f64207d-5e23-42bf-9412-707e8ef81c08",
-   "metadata": {},
-   "source": [
-    "##### so moving on, that's something to resolve if I ever publish with this data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "26b7c1f5-2832-43ff-9586-2fd945f4ec3a",
    "metadata": {},
    "source": [
-    "### Natality data"
+    "#### Natality data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "81d65d54-1aa7-428d-a008-d522c9c51745",
    "metadata": {},
    "outputs": [],
@@ -609,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "43bd2ee1-b4b1-4725-9bf1-724ecc4e687a",
    "metadata": {},
    "outputs": [],
@@ -619,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "f1c2a05e-6572-47ed-bb4c-ad0d6f5cb72a",
    "metadata": {},
    "outputs": [],
@@ -631,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "7e7acbfd-a8e7-4926-aff8-bdd4b31604ca",
    "metadata": {},
    "outputs": [],
@@ -683,14 +657,13 @@
     "tags": []
    },
    "source": [
-    "#### QC against 2020 maternal mortality work\n",
-    "results show that natality data is a precise match, only differences in deaths are the small ones"
+    "#### QC against 2020 maternal mortality live birth numbers\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "ac365995-5f9b-4496-9683-1ead6c03d480",
+   "execution_count": 14,
+   "id": "3f828445-30e9-47b2-a0ab-7db7b01d6aca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,8 +675,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "69979185-91b3-45a6-882f-6ce96e913f02",
+   "metadata": {},
+   "source": [
+    "#### The number of live births matches up, so I'm going to sketch out the maternal mortalities rates over time\n",
+    "Even though there are some small discrepancies in the death counts, the graph will still give a sense of the rates over time, until I can reconcile those differences"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "6f33e16d-62bc-48c2-bc65-cfc2240863fc",
    "metadata": {},
    "outputs": [],
@@ -718,66 +700,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "6a794c3b-11d2-40d2-a12e-75c64f68e64b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "years = [\"2020\", \"2019\", \"2018\"]\n",
-    "test = deaths_byyear[deaths_byyear[\"year\"].isin(years)].merge(\n",
-    "    (births_byyear[births_byyear[\"year\"].isin(years)]),\n",
-    "    on=[\"year\", \"race_whispanicorigin\"],\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ce7073a3-94fc-45d6-b0dd-6a83ef31e904",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "### Here's the causes and codes I'm treating as possibly prevented by abortion\n",
-    "Ectopic pregnancy: O00.9 <br>\n",
-    "Placenta praevia with haemorrhage O40.1 <br>\n",
-    "Spontaneous abortion (miscarriage) O03. ... <br>\n",
-    "hemorrhage early in pregnancy 020.9\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "fe0eb946-16c9-4ac1-9715-607ff93375e9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "abortion_causes = [\"O00.9\", \"O40.1\", \"O03.1\", \"O03.3\", \"O03.4\", \"O3.8\", \"O20.9\"]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b8c35f0a-8c6f-48cd-9f0f-39bf0273a7ea",
-   "metadata": {},
-   "source": [
-    "### for now, focus on visualizing different racial groups"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "be0e34ef-aeeb-4ed0-81a5-cb4e087e3cde",
    "metadata": {},
    "outputs": [],
    "source": [
     "years = [\"2016\", \"2017\", \"2018\", \"2019\", \"2020\"]\n",
-    "rates = deaths_byyear[\n",
-    "    (deaths_byyear[\"race_whispanicorigin\"] != \"0\") & (deaths_byyear[\"year\"].isin(years))\n",
-    "].merge(births_byyear, on=[\"year\", \"race_whispanicorigin\"])"
+    "rates = (\n",
+    "    deaths_byyear[\n",
+    "        (deaths_byyear[\"race_whispanicorigin\"] != \"0\")\n",
+    "        & (deaths_byyear[\"year\"].isin(years))\n",
+    "    ]\n",
+    "    .merge(births_byyear, on=[\"year\", \"race_whispanicorigin\"])\n",
+    "    .copy()\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "b2bfad04-c977-4b51-ad03-67f79043a5a2",
    "metadata": {},
    "outputs": [],
@@ -787,29 +728,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "bdba7dab-1190-41e7-851c-7c054971d4e8",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/amatthews/.pyenv/versions/3.9.14/lib/python3.9/site-packages/altair/utils/core.py:317: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
-      "  for col_name, dtype in df.dtypes.iteritems():\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-add909c2d37f4ff782e34466fa1513fa\"></div>\n",
+       "<div id=\"altair-viz-ff932af9a97544719dccc3ddfca5a07e\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-add909c2d37f4ff782e34466fa1513fa\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-add909c2d37f4ff782e34466fa1513fa\");\n",
+       "    if (outputDiv.id !== \"altair-viz-ff932af9a97544719dccc3ddfca5a07e\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-ff932af9a97544719dccc3ddfca5a07e\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -862,7 +795,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -890,7 +823,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.14"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
