--- a/01-later-deaths-intl.ipynb
+++ b/01-later-deaths-intl.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "8a4717c4-3b3b-4893-b50e-184d69b6ce8f",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "d107bfd1-ad4c-4a0d-9d9c-776c94d06ddd",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "3ce3bc55-eb38-4098-a493-dca846df9efd",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "49ebdfff-6212-493a-8441-35e3b696bdb2",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "d62d3dcd-e441-48d5-8b41-0eda80b277bb",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "ff424504-9632-4bce-a607-580e26518bfc",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "876df8dc-9a6d-486a-96e8-689f09987eb1",
    "metadata": {},
    "outputs": [
@@ -345,7 +345,7 @@
        "21           2020           416.0          2160.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "b8557fdb-4ad7-4853-8940-4ed78a928f11",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "47bf6cf5-ad1b-4772-8e86-4a5fea468e98",
    "metadata": {},
    "outputs": [],
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "2c29d0d9-ef51-45a5-904f-2de575e86e74",
    "metadata": {},
    "outputs": [],
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "9f12e3bb-8eea-4bdc-abb8-c148e995ce49",
    "metadata": {},
    "outputs": [
@@ -405,13 +405,13 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-592119efba42497a8beafd1f35a0bdf9\"></div>\n",
+       "<div id=\"altair-viz-a3a457619acc47de94dbfd100909b253\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-592119efba42497a8beafd1f35a0bdf9\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-592119efba42497a8beafd1f35a0bdf9\");\n",
+       "    if (outputDiv.id !== \"altair-viz-a3a457619acc47de94dbfd100909b253\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-a3a457619acc47de94dbfd100909b253\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -464,7 +464,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "9c770fbc-5893-45f9-8927-08702d4e1d87",
    "metadata": {},
    "outputs": [],
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "075e1f58-1f77-4c45-83a4-ca59bf7685df",
    "metadata": {},
    "outputs": [],
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "f6e81691-5bb4-4b78-8e53-5b56cfecc0ff",
    "metadata": {},
    "outputs": [],
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "bd08f161-1a77-4fd1-ba71-e35160f45253",
    "metadata": {},
    "outputs": [],
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "4309fe7e-262e-43f5-85a8-c06698edd103",
    "metadata": {},
    "outputs": [],
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "d9054384-f42e-4550-9f6a-2993df6de5e8",
    "metadata": {},
    "outputs": [],
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "dfa77aa8-452e-45b5-b7ca-74b04aae55f3",
    "metadata": {},
    "outputs": [],
@@ -586,22 +586,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dabf024f-83a7-4ac0-a2e3-cc5cab47f7ff",
+   "metadata": {},
+   "source": [
+    "#### the US is rising over time, while other countries are reducing their maternal mortality"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "ac1e5e69-d7dc-495a-83f0-a48b2143bf90",
+   "execution_count": 21,
+   "id": "df474eef-9ead-40fe-a238-88877b106578",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-300c30d5ee984ed28f671326d7cf1961\"></div>\n",
+       "<div id=\"altair-viz-ca4dbfdde31a4fa99797aa49970ae4b6\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-300c30d5ee984ed28f671326d7cf1961\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-300c30d5ee984ed28f671326d7cf1961\");\n",
+       "    if (outputDiv.id !== \"altair-viz-ca4dbfdde31a4fa99797aa49970ae4b6\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-ca4dbfdde31a4fa99797aa49970ae4b6\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -654,7 +662,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
